--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dev-utils</name>
+	<name>content-framework</name>
 	<comment>Project dev-utils created by Buildship.</comment>
 	<projects>
 	</projects>
