--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ plugins {
     id 'java'
     id 'application'
     id 'maven-publish'
+    id 'com.palantir.git-version' version '0.12.2'
 }
 
 publishing {
    publications {
         group 'org.thinkit.framework.content'
-        version = System.getenv("GRADLE_PUBLISH_VERSION") ?: "1.0-SNAPSHOT"
+        version = gitVersion()
 
         gpr(MavenPublication) {
             from(components.java)
@@ -33,8 +34,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/myConsciousness/content-framework")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
+                username = System.getenv("GITHUB_USER")
+                password = System.getenv("GITHUB_PUBLISH_TOKEN")
             }
         }
     }
@@ -45,8 +46,8 @@ repositories {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/myConsciousness/dev-utils")
         credentials {
-            username = "myConsciousness"
-            password = "e14b43ba8fbbd6a1a448ba761dbb93305126aba2"
+            username = System.getenv("GITHUB_USER")
+            password = System.getenv("GITHUB_DOWNLOAD_PACKAGE_TOKEN")
         }
     }
 
@@ -72,10 +73,10 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.11.0'
 
-    implementation 'org.thinkit.common:dev-utils:1.0-SNAPSHOT'
-
     compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    implementation 'org.thinkit.common:dev-utils:v1.0.0'
 }
 
 test {
