--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
     implementation 'org.thinkit.common:dev-utils:v1.0-3-g00a1cf4'
+    implementation 'org.thinkit.framework.classlocation:class-location:v-1.0.0-1-gc5fce9d'
 }
 
 test {
